--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-  "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-  "build": "npm run build --prefix frontend",
+"scripts": {
+  "dev": "concurrently \"npm run dev --prefix backend\" \"vite\"",
+  "build": "vite build",
   "start": "node backend/index.js",
   "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
   "preview": "vite preview"
